fixing wrapping and width issues in gallery

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 ul {
@@ -77,7 +79,7 @@ button:hover {
     background-image: url("./images/background.jpg");
     background-size: cover;
     width: 110vw;
-    height: 110vh;
+    height: 1000px;
     object-fit: cover;
   
     -webkit-filter: blur(6px) brightness(70%);
@@ -89,6 +91,7 @@ button:hover {
     flex-direction: column;
     height: 300px;
     width: 400px;
+    min-width: 300px;
     gap: 16px;
     align-items: flex-start;
 }
@@ -108,15 +111,19 @@ button:hover {
 }
 
 .gallery {
-    display: block;
-    height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: #415d46;
 }
 
 .title {
     color: white;
     font-size: 32px;
-    padding: 32px;
+    padding: 24px;
+    width: 500px;
+    max-width: 80vw;
+    border-bottom: 2px solid white;
     margin-bottom: 42px;
     font-weight: 800;
     text-align: center;
@@ -126,7 +133,9 @@ button:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 32px;
+    margin-bottom: 24px;
 }
 
 .info {
